--- a/Thesis.tex
+++ b/Thesis.tex
@@ -129,17 +129,17 @@
 
 \afterpage{\blankpage}
 \include{./Chapters/01_Introduction/Introduction}
-% \afterpage{\blankpage}
-% \include{./Chapters/02_Registration/Registration}
+\afterpage{\blankpage}
+\include{./Chapters/02_Mentalizing_ASC/Mentalizing_ASC}
 % \afterpage{\blankpage}
 % \include{./Chapters/03_GLM/GLM}
 % \afterpage{\blankpage}
 % \include{./Chapters/04_Attention/Attention}
 % \afterpage{\blankpage}
 % \include{./Chapters/05_Porcupine/Porcupine}
-% \afterpage{\blankpage}
-% \include{./Chapters/06_Discussion/Discussion}
-% \afterpage{\blankpage}
+ \afterpage{\blankpage}
+ \include{./Chapters/06_Discussion/Discussion}
+ \afterpage{\blankpage}
  \include{./Chapters/07_Appendix/Appendix}
  \afterpage{\blankpage}
 
