text chapter 2 and 3

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -56,6 +56,7 @@
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{setspace}
+\usepackage{textcomp}
 
 
 \usepackage{amsmath}
@@ -134,9 +135,9 @@
 \afterpage{\blankpage}
 \include{./Chapters/01_Introduction/Introduction}
 \afterpage{\blankpage}
-\include{./Chapters/02_Mentalizing_ASC/Mentalizing_ASC}
-% \afterpage{\blankpage}
-% \include{./Chapters/03_GLM/GLM}
+\include{./Chapters/02_MentalizingASC/MentalizingASC}
+\afterpage{\blankpage}
+\include{./Chapters/03_MentalizingSA/MentalizingSA}
 % \afterpage{\blankpage}
 % \include{./Chapters/04_Attention/Attention}
 % \afterpage{\blankpage}
