changes to ch 2 and 3 w/o large files

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -32,7 +32,7 @@
 
 
 \usepackage{multicol} % Used for the two-column layout of the document
-\usepackage[hang, font=small,labelfont=bf,up,textfont=it,up]{caption} % Custom captions under/above floats in tables or figures
+\usepackage[hang, font=small,labelfont=bf,up]{caption} % Custom captions under/above floats in tables or figures
 \usepackage{booktabs} % Horizontal rules in tables
 \usepackage{float} % Required for tables and figures in the multi-column environment - they need to be placed in specific locations with the [H] (e.g. \begin{table}[H])
 
@@ -131,6 +131,8 @@
 \end{titlepage}
 
 %\input{./Chapters/Titelpagina.tex}
+
+
 
 \afterpage{\blankpage}
 \include{./Chapters/01_Introduction/Introduction}
