--- a/Bibliography/Bibliography.bib
+++ b/Bibliography/Bibliography.bib
@@ -165,7 +165,7 @@
 	pages = {301--344},
 }
 
-@article{stolk2013,
+@article{stolk2013neural,
 	title = {Neural mechanisms of communicative innovation},
 	volume = {110},
 	issn = {0027-8424, 1091-6490},
@@ -1955,7 +1955,7 @@ One or more of the authors of this paper self-identifies as a member of one or m
 	file = {Camacho et al. - 2023 - Higher Intersubject Variability in Neural Response.pdf:C\:\\Users\\marmang\\Zotero\\storage\\JWRJGYGU\\Camacho et al. - 2023 - Higher Intersubject Variability in Neural Response.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\marmang\\Zotero\\storage\\AUEQCWHX\\S0890856723022347.html:text/html},
 }
 
-@article{hirsch2004,
+@article{hirsch2004information,
 	series = {Social {Phobia} and {Social} {Anxiety}},
 	title = {Information-processing bias in social phobia},
 	volume = {24},
@@ -2085,7 +2085,7 @@ CONCLUSIONS: About half of Americans will meet the criteria for a DSM-IV disorde
 	file = {Losh and Capps - Narrative Ability in High-Functioning Children wit.pdf:C\:\\Users\\marmang\\Zotero\\storage\\SEEGGSIU\\Losh and Capps - Narrative Ability in High-Functioning Children wit.pdf:application/pdf},
 }
 
-@misc{mangnus2024,
+@misc{mangnus2024dataset,
 	title = {Neural and pupillary responses to a narrative movie from autistic and neurotypical individuals.},
 	url = {https://doi.org/10.34973/1pth-1493},
 	abstract = {This dataset contains fMRI and pupillometry data from autistic and neurotypical individuals watching the animated Pixar short movie 'Partly Cloudy'. The movie contains discrete events that elicit mental state inferences and control events (Jacoby et al., 2016; Richardson et al., 2018). In addition, the movie allows the viewers to build a mental representation of the narrative over time, showing variable responses between participants in both modalities included in the dataset.},
@@ -2110,7 +2110,7 @@ CONCLUSIONS: About half of Americans will meet the criteria for a DSM-IV disorde
 	file = {Brennan en Clark - Conceptual Pacts and Lexical Choice in Conversatio.pdf:C\:\\Users\\marmang\\Zotero\\storage\\HX6D2TN9\\Brennan en Clark - Conceptual Pacts and Lexical Choice in Conversatio.pdf:application/pdf;Snapshot:C\:\\Users\\marmang\\Zotero\\storage\\6MEFSD3Q\\1996-06524-010.html:text/html},
 }
 
-@article{bogels2015,
+@article{bogels2015neural,
 	title = {Neural signatures of response planning occur midway through an incoming question in conversation},
 	volume = {5},
 	issn = {2045-2322},
@@ -2164,7 +2164,7 @@ CONCLUSIONS: About half of Americans will meet the criteria for a DSM-IV disorde
 	pages = {255--289},
 }
 
-@article{bogels2015,
+@article{bogels2015never,
 	title = {Never {Say} {No} … {How} the {Brain} {Interprets} the {Pregnant} {Pause} in {Conversation}},
 	volume = {10},
 	issn = {1932-6203},
@@ -2188,12 +2188,12 @@ CONCLUSIONS: About half of Americans will meet the criteria for a DSM-IV disorde
 	shorttitle = {The maps problem and the mapping problem},
 	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3498052/},
 	doi = {10.1080/02643294.2012.710600},
-	abstract = {Research on the brain basis of speech and language faces theoretical and empirical challenges. The majority of current research, dominated by imaging, deficit-lesion, and electrophysiological techniques, seeks to identify regions that underpin aspects of language processing such as phonology, syntax, or semantics. The emphasis lies on localization and spatial characterization of function. The first part of the paper deals with a practical challenge that arises in the context of such a research program. This maps problem concerns the extent to which spatial information and localization can satisfy the explanatory needs for perception and cognition. Several areas of investigation exemplify how the neural basis of speech and language is discussed in those terms (regions, streams, hemispheres, networks). The second part of the paper turns to a more troublesome challenge, namely how to formulate the formal links between neurobiology and cognition. This principled problem thus addresses the relation between the primitives of cognition (here speech, language) and neurobiology. Dealing with this mapping problem invites the development of linking hypotheses between the domains. The cognitive sciences provide granular, theoretically motivated claims about the structure of various domains (the ‘cognome’); neurobiology, similarly, provides a list of the available neural structures. However, explanatory connections will require crafting computationally explicit linking hypotheses at the right level of abstraction. For both the practical maps problem and the principled mapping problem, developmental approaches and evidence can play a central role in the resolution.},
+	abstract = {Research on the brain basis of speech and language faces theoretical and empirical challenges. The majority of current research, dominated by imaging, deficit-lesion, and electrophysiological techniques, seeks to identify regions that underpin aspects of language processing such as phonology, syntax, or semantics. The emphasis lies on localization and spatial characterization of function. The first part of the paper deals with a practical challenge that arises in the context of such a research program. This maps problem concerns the extent to which spatial information and localization can satisfy the explanatory needs for perception and cognition. Several areas of investigation exemplify how the neural basis of speech and language is discussed in those terms (regions, streams, hemispheres, networks). The second part of the paper turns to a more troublesome challenge, namely how to formulate the formal links between neurobiology and cognition. This principled problem thus addresses the relation between the primitives of cognition (here speech, language) and neurobiology. Dealing with this mapping problem invites the development of linking hypotheses between the domains. The cognitive sciences provide granular, theoretically motivated claims about the structure of various domains (the 'cognome'); neurobiology, similarly, provides a list of the available neural structures. However, explanatory connections will require crafting computationally explicit linking hypotheses at the right level of abstraction. For both the practical maps problem and the principled mapping problem, developmental approaches and evidence can play a central role in the resolution.},
 	number = {1-2},
 	urldate = {2024-03-20},
 	journal = {Cognitive neuropsychology},
 	author = {Poeppel, David},
-	month = feb,
+	month = {2},
 	year = {2012},
 	pmid = {23017085},
 	pmcid = {PMC3498052},
@@ -2351,7 +2351,7 @@ CONCLUSIONS: About half of Americans will meet the criteria for a DSM-IV disorde
 	publisher = {MIT Press}
 }
 
-@misc{mangnus2024,
+@misc{mangnus2024preprint,
 	title = {Preserved spontaneous mentalizing amid reduced intersubject variability in autism during a movie narrative},
 	copyright = {© 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution 4.0 International), CC BY 4.0, as described at http://creativecommons.org/licenses/by/4.0/},
 	url = {https://www.biorxiv.org/content/10.1101/2024.03.08.583911v1},
@@ -3876,32 +3876,7 @@ These results provide the first evidence for delayed latency of phonetic MMF in 
 	shorttitle = {Exploring the role of the posterior middle temporal gyrus in semantic cognition},
 	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4927261/},
 	doi = {10.1016/j.neuroimage.2016.05.051},
-	abstract = {Making sense of the world around us depends upon selectively retrieving information relevant to our current goal or context. However, it is unclear whether selective semantic retrieval relies exclusively on general control mechanisms recruited in demanding non-semantic tasks, or instead on systems specialised for the control of meaning. One hypothesis is that the left posterior middle temporal gyrus (pMTG) is important in the controlled retrieval of semantic (not non-semantic) information; however this view remains controversial since a parallel literature links this site to event and relational semantics. In a functional neuroimaging study, we demonstrated that an area of pMTG implicated in semantic control by a recent meta-analysis was activated in a conjunction of (i) semantic association over size judgements and (ii) action over colour feature matching. Under these circumstances the same region showed functional coupling with the inferior frontal gyrus — another crucial site for semantic control. Structural and functional connectivity analyses demonstrated that this site is at the nexus of networks recruited in automatic semantic processing (the default mode network) and executively demanding tasks (the multiple-demand network). Moreover, in both task and task-free contexts, pMTG exhibited functional properties that were more similar to ventral parts of inferior frontal cortex, implicated in controlled semantic retrieval, than more dorsal inferior frontal sulcus, implicated in domain-general control. Finally, the pMTG region was functionally correlated at rest with other regions implicated in control-demanding semantic tasks, including inferior frontal gyrus and intraparietal sulcus. We suggest that pMTG may play a crucial role within a large-scale network that allows the integration of automatic retrieval in the default mode network with executively-demanding goal-oriented cognition, and that this could support our ability to understand actions and non-dominant semantic associations, allowing semantic retrieval to be ‘shaped’ to suit a task or context., 
-          
-            Image 1
-            
-          
-        , 
-          
-            
-              •
-              Posterior middle temporal gyrus supports semantic control and event semantics.
-            
-            
-              •
-              pMTG is at nexus of the default mode and multiple-demand networks.
-            
-            
-              •
-              It links anterior temporal and prefrontal regions for representation and control.
-            
-            
-              •
-              pMTG connects with inferior frontal gyrus during tasks and at rest.
-            
-            
-              •
-              These sites form a semantic control network distinct from executive control.},
+	abstract = {Making sense of the world around us depends upon selectively retrieving information relevant to our current goal or context. However, it is unclear whether selective semantic retrieval relies exclusively on general control mechanisms recruited in demanding non-semantic tasks, or instead on systems specialised for the control of meaning. One hypothesis is that the left posterior middle temporal gyrus (pMTG) is important in the controlled retrieval of semantic (not non-semantic) information; however this view remains controversial since a parallel literature links this site to event and relational semantics. In a functional neuroimaging study, we demonstrated that an area of pMTG implicated in semantic control by a recent meta-analysis was activated in a conjunction of (i) semantic association over size judgements and (ii) action over colour feature matching. Under these circumstances the same region showed functional coupling with the inferior frontal gyrus — another crucial site for semantic control. Structural and functional connectivity analyses demonstrated that this site is at the nexus of networks recruited in automatic semantic processing (the default mode network) and executively demanding tasks (the multiple-demand network). Moreover, in both task and task-free contexts, pMTG exhibited functional properties that were more similar to ventral parts of inferior frontal cortex, implicated in controlled semantic retrieval, than more dorsal inferior frontal sulcus, implicated in domain-general control. Finally, the pMTG region was functionally correlated at rest with other regions implicated in control-demanding semantic tasks, including inferior frontal gyrus and intraparietal sulcus. We suggest that pMTG may play a crucial role within a large-scale network that allows the integration of automatic retrieval in the default mode network with executively-demanding goal-oriented cognition, and that this could support our ability to understand actions and non-dominant semantic associations, allowing semantic retrieval to be ‘shaped’ to suit a task or context.},
 	urldate = {2024-07-05},
 	journal = {Neuroimage},
 	author = {Davey, James and Thompson, Hannah E. and Hallam, Glyn and Karapanagiotidis, Theodoros and Murphy, Charlotte and De Caso, Irene and Krieger-Redwood, Katya and Bernhardt, Boris C. and Smallwood, Jonathan and Jefferies, Elizabeth},
@@ -3933,7 +3908,7 @@ These results provide the first evidence for delayed latency of phonetic MMF in 
 	file = {Full Text PDF:C\:\\Users\\marmang\\Zotero\\storage\\B3DGC2TX\\Prieto-Fidalgo and Calvete - 2024 - The role of interpretation biases and safety behav.pdf:application/pdf},
 }
 
-@article{hirsch2004,
+@article{hirsch2004negative,
 	title = {Negative self‐imagery in social anxiety contaminates social interactions},
 	volume = {12},
 	issn = {0965-8211, 1464-0686},
@@ -4797,7 +4772,7 @@ CONCLUSIONS: Our data indicate that social phobia in the general population is a
 	pages = {569--582},
 }
 
-@incollection{alfano2011,
+@incollection{white2011socialanxiety,
 	address = {Washington},
 	title = {Social anxiety in adolescents on the autism spectrum.},
 	isbn = {978-1-4338-0948-4 978-1-4338-0949-1},
@@ -4832,7 +4807,7 @@ CONCLUSIONS: Our data indicate that social phobia in the general population is a
 	file = {Accepted Version:C\:\\Users\\marmang\\Zotero\\storage\\2JE4RJL6\\Kleinhans et al. - 2010 - Association between amygdala response to emotional.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\marmang\\Zotero\\storage\\NMBLUEMX\\S0028393210003179.html:text/html},
 }
 
-@article{kuhlen2017,
+@article{kuhlen2017having,
 	title = {Having a task partner affects lexical retrieval: {Spoken} word production in shared task settings},
 	volume = {166},
 	shorttitle = {Having a task partner affects lexical retrieval},
@@ -5025,6 +5000,7 @@ CONCLUSIONS: Our data indicate that social phobia in the general population is a
 	author = {Kellogg, Ronald T.},
 	year = {2016},
 	doi = {10.4135/9781483399331},
+	publisher = {SAGE},
 	keywords = {cognitive psychology, decision making, knowledge, long-term memory, memory, problem solving, representation, short-term memory, stimuli, working memory},
 	file = {SAGE Knowledge Snapshot:C\:\\Users\\marmang\\Zotero\\storage\\YFACMRTM\\fundamentals-of-cognitive-psychology-3e.html:text/html;Submitted Version:C\:\\Users\\marmang\\Zotero\\storage\\PU8RP28X\\Kellogg - 2016 - Fundamentals of Cognitive Psychology.pdf:application/pdf},
 }
