text of chapter 4

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -132,7 +132,9 @@
 
 %\input{./Chapters/Titelpagina.tex}
 
+\tableofcontents
 
+\newpage
 
 \afterpage{\blankpage}
 \include{./Chapters/01_Introduction/Introduction}
@@ -140,8 +142,8 @@
 \include{./Chapters/02_MentalizingASC/MentalizingASC}
 \afterpage{\blankpage}
 \include{./Chapters/03_MentalizingSA/MentalizingSA}
-% \afterpage{\blankpage}
-% \include{./Chapters/04_Attention/Attention}
+\afterpage{\blankpage}
+\include{./Chapters/04_LanguageASC/LanguageASC}
 % \afterpage{\blankpage}
 % \include{./Chapters/05_Porcupine/Porcupine}
  \afterpage{\blankpage}
