change link color and add TOC

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -30,6 +30,7 @@
 \voffset -14mm
 %\headsep 14mm
 
+\setcounter{secnumdepth}{0} % keep sections unnumbered but include in toc
 
 \usepackage{multicol} % Used for the two-column layout of the document
 \usepackage[hang, font=small,labelfont=bf,up]{caption} % Custom captions under/above floats in tables or figures
@@ -69,7 +70,7 @@
 \usepackage{geometry}
 \usepackage{nameref}
 \usepackage[finalnew]{Stylesheets/trackchanges}
-\usepackage[colorlinks=true]{hyperref} % For hyperlinks in the PDF
+\usepackage[colorlinks=true,linkcolor=blue,citecolor=black]{hyperref} % For hyperlinks in the PDF
 
 % settings bibliography
 \usepackage[round]{natbib}
