--- a/Thesis.tex
+++ b/Thesis.tex
@@ -31,6 +31,7 @@
 %\headsep 14mm
 
 \setcounter{secnumdepth}{0} % keep sections unnumbered but include in toc
+\setcounter{tocdepth}{1}
 
 \usepackage{multicol} % Used for the two-column layout of the document
 \usepackage[hang, font=small,labelfont=bf,up]{caption} % Custom captions under/above floats in tables or figures
@@ -110,11 +111,12 @@
 % BEGIN DOCUMENT
 %----------------------------------------------------------------------------------------
 
-\renewcommand{\familydefault}{\sfdefault}
+%\renewcommand{\familydefault}{\sfdefault}
 %\usepackage[default,osfigures,scale=0.95]{Open Sans}
 \usepackage[T1]{fontenc}
+\usepackage{fourier}
 %\normalfont
-\usepackage[sfdefault]{AlegreyaSans} 
+%\usepackage[sfdefault]{AlegreyaSans}
 
 \begin{document}
 \setlength{\parindent}{0.5pt}
