minor proofreading edits

--- a/Bibliography/Bibliography.bib
+++ b/Bibliography/Bibliography.bib
@@ -5389,7 +5389,7 @@ age: 2 years mean, 1.5-2.5 years range
 @article{mangnus2024social,
 	title = {Social {Anxiety} {Alters} {Theory} of {Mind} {Activation} and {Intersubject} {Neural} {Variability} {During} {Movie} {Viewing}},
 	author = {Mangnus, Margot and Koch, Saskia B. J. and Devillers, Robin and Hagoort, Peter and Bašnáková, Jana and Stolk, Arjen},
-	journal = {submitted},
+	journal = {},
 	year = {2024},
 }
 
