--- a/Thesis.tex
+++ b/Thesis.tex
@@ -71,7 +71,8 @@
 \usepackage{geometry}
 \usepackage{nameref}
 \usepackage[finalnew]{Stylesheets/trackchanges}
-\usepackage[colorlinks=true,linkcolor=blue,citecolor=black]{hyperref} % For hyperlinks in the PDF
+\usepackage[colorlinks=true,linkcolor=blue,citecolor=darkgray,urlcolor=blue]{hyperref} % For hyperlinks in the PDF
+\urlstyle{rm}
 
 % settings bibliography
 \usepackage[round]{natbib}
