--- a/Thesis.tex
+++ b/Thesis.tex
@@ -140,13 +140,13 @@
 
 \newpage
 
-\afterpage{\blankpage}
+%\afterpage{\blankpage}
 \include{./Chapters/01_Introduction/Introduction}
 %\afterpage{\blankpage}
 \include{./Chapters/02_MentalizingASC/MentalizingASC}
 %\afterpage{\blankpage}
 \include{./Chapters/03_MentalizingSA/MentalizingSA}
-\afterpage{\blankpage}
+%\afterpage{\blankpage}
 \include{./Chapters/04_LanguageASC/LanguageASC}
 %\afterpage{\blankpage}
 \include{./Chapters/05_Discussion/Discussion}
