update Research Data Management section

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -73,6 +73,7 @@
 \usepackage[finalnew]{Stylesheets/trackchanges}
 \usepackage[colorlinks=true,linkcolor=blue,citecolor=darkgray,urlcolor=blue]{hyperref} % For hyperlinks in the PDF
 \urlstyle{rm}
+\usepackage{anyfontsize} % make text a specific font size instead of small, tiny, huge etc.
 
 % settings bibliography
 \usepackage[round]{natbib}
