implement feedback PH

--- a/Bibliography/Bibliography.bib
+++ b/Bibliography/Bibliography.bib
@@ -3863,7 +3863,7 @@ These results provide the first evidence for delayed latency of phonetic MMF in 
 	number = {1},
 	urldate = {2024-07-05},
 	journal = {Behavioural and Cognitive Psychotherapy},
-	author = {Prieto-Fidalgo, Ángel and Calvete, Esther},
+	author = {Prieto-Fidalgo, Angel and Calvete, Esther},
 	month = jan,
 	year = {2024},
 	keywords = {Cognitive vulnerability, Intensive longitudinal design, Interpretation bias, Safety behaviours, Social anxiety},
