--- a/Thesis.tex
+++ b/Thesis.tex
@@ -50,7 +50,7 @@
 \titleformat{\chapter}[block]
 	{\bfseries\huge}{\filright\huge\thechapter\hspace{1ex}\textnormal{|}}{1ex}{\huge\filright }
 % JS packages
-\usepackage{etex}
+%\usepackage{etex}
 \usepackage{tabto}
 \usepackage{paralist}
 
