--- a/Thesis.tex
+++ b/Thesis.tex
@@ -2,7 +2,7 @@
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
-\documentclass[twoside,openright,12pt,fleqn]{book}
+\documentclass[openright,12pt,fleqn]{book} % use twoside in options for publishable version
 %\special{papersize=210mm,297mm}
 \linespread{1.15} % Line spacing - Palatino needs more space between lines
 \usepackage{microtype} % Slightly tweak font spacing for aesthetics
@@ -22,8 +22,8 @@
 \pagestyle{plain} % center all page numbering
 \usepackage[
 	letterpaper,
-	inner=30mm,
-	outer=25mm,
+	inner=30mm, % publishable: 30mm
+	outer=30mm, % publishable: 25mm
 	bottom=21.5mm,
 	footskip=13.5mm	
 ]{geometry} % paperstyle and margins
@@ -71,7 +71,7 @@
 \usepackage{geometry}
 \usepackage{nameref}
 \usepackage[finalnew]{Stylesheets/trackchanges}
-\usepackage[colorlinks=true,linkcolor=blue,citecolor=darkgray,urlcolor=blue]{hyperref} % For hyperlinks in the PDF
+\usepackage[colorlinks=true,linkcolor=black,citecolor=darkgray,urlcolor=blue]{hyperref} % For hyperlinks in the PDF
 \urlstyle{rm}
 \usepackage{anyfontsize} % make text a specific font size instead of small, tiny, huge etc.
 
@@ -125,21 +125,20 @@
 %\thispagestyle{fancy} % All pages have headers and footers
 \renewcommand{\vec}[1]{\mathbf{#1}} %This command will make \vec typeset LaTeX vectors using bold instead of an arrow:
 
-\begin{titlepage}
-	\centering
-	\vspace{1cm}
-	\vspace{1.5cm}
-	{\huge\bfseries When Communication is Hard: \\ Neurocognitive Dynamics underlying \\ Language and Communication \\in Autism and Social Anxiety \par}	%into the cortical depths of the unknown
-	\vspace{4cm}
-	{\Large by \\ Margot Mangnus \par}
-	\vfill
-\end{titlepage}
 
-%\input{./Chapters/Titelpagina.tex}
+% \begin{titlepage}
+% 	\centering
+% 	\vspace{1cm}
+% 	\vspace{1.5cm}
+% 	{\huge\bfseries When Communication is Hard: \\ Neurocognitive Dynamics underlying \\ Language and Communication \\in Autism and Social Anxiety \par}
+% 	\vspace{4cm}
+% 	{\Large by \\ Margot Mangnus \par}
+% 	\vfill
+% \end{titlepage}
+
+\input{./Chapters/Titelpagina.tex}
 
 \tableofcontents
-
-\newpage
 
 %\afterpage{\blankpage}
 \include{./Chapters/01_Introduction/Introduction}
