feedback PH ch4

--- a/Bibliography/Bibliography.bib
+++ b/Bibliography/Bibliography.bib
@@ -5925,3 +5925,22 @@ Our findings provide functional evidence of spontaneous mentalizing in autism, d
 	keywords = {Functional magnetic resonance imaging, intersubject correlation, naturalistic neuroscience, pupillometry, theory of mind},
 	file = {ScienceDirect Snapshot:C\:\\Users\\marmang\\Zotero\\storage\\5MYF58F2\\S2451902224003069.html:text/html},
 }
+
+
+@article{antzoulatos2016,
+	title = {Synchronous beta rhythms of frontoparietal networks support only behaviorally relevant representations},
+	volume = {5},
+	issn = {2050-084X},
+	doi = {10.7554/eLife.17822},
+	abstract = {Categorization has been associated with distributed networks of the primate brain, including the prefrontal cortex (PFC) and posterior parietal cortex (PPC). Although category-selective spiking in PFC and PPC has been established, the frequency-dependent dynamic interactions of frontoparietal networks are largely unexplored. We trained monkeys to perform a delayed-match-to-spatial-category task while recording spikes and local field potentials from the PFC and PPC with multiple electrodes. We found category-selective beta- and delta-band synchrony between and within the areas. However, in addition to the categories, delta synchrony and spiking activity also reflected irrelevant stimulus dimensions. By contrast, beta synchrony only conveyed information about the task-relevant categories. Further, category-selective PFC neurons were synchronized with PPC beta oscillations, while neurons that carried irrelevant information were not. These results suggest that long-range beta-band synchrony could act as a filter that only supports neural representations of the variables relevant to the task at hand.},
+	language = {eng},
+	journal = {eLife},
+	author = {Antzoulatos, Evan G. and Miller, Earl K.},
+	month = nov,
+	year = {2016},
+	pmid = {27841747},
+	pmcid = {PMC5148609},
+	keywords = {Action Potentials, Animals, Beta Rhythm, categorization, cognition, Delta Rhythm, Macaca mulatta, Models, Neurological, Nerve Net, neural oscillations, Neurons, neuroscience, parietal cortex, Parietal Lobe, prefrontal cortex, Prefrontal Cortex, rhesus macaque, Spatial Behavior},
+	pages = {e17822},
+	file = {Full Text:C\:\\Users\\mangn\\Zotero\\storage\\HP9XHTA2\\Antzoulatos and Miller - 2016 - Synchronous beta rhythms of frontoparietal network.pdf:application/pdf},
+}
