--- a/Thesis.tex
+++ b/Thesis.tex
@@ -10,6 +10,9 @@
 % leave 10pt blank space between paragraphs
 \usepackage[skip=10pt plus1pt, indent=0pt]{parskip}	
 
+% remove blank pages in pdf
+\let\cleardoublepage=\clearpage
+
 % Used for blank pages
 \usepackage{afterpage}
 \newcommand\blankpage{
@@ -126,17 +129,6 @@
 \setlength{\parindent}{0.5pt}
 %\thispagestyle{fancy} % All pages have headers and footers
 \renewcommand{\vec}[1]{\mathbf{#1}} %This command will make \vec typeset LaTeX vectors using bold instead of an arrow:
-
-
-% \begin{titlepage}
-% 	\centering
-% 	\vspace{1cm}
-% 	\vspace{1.5cm}
-% 	{\huge\bfseries When Communication is Hard: \\ Neurocognitive Dynamics underlying \\ Language and Communication \\in Autism and Social Anxiety \par}
-% 	\vspace{4cm}
-% 	{\Large by \\ Margot Mangnus \par}
-% 	\vfill
-% \end{titlepage}
 
 \input{./Chapters/Titelpagina.tex}
 
