add sections cv, publications, graduate school

--- a/Bibliography/Bibliography.bib
+++ b/Bibliography/Bibliography.bib
@@ -3607,7 +3607,7 @@ These results provide the first evidence for delayed latency of phonetic MMF in 
 	address = {London},
 	title = {A cognitive-behavioral model of social anxiety disorder},
 	isbn = {978-0-12-394427-6},
-	url = {http://www.scopus.com/inward/record.url?scp=84910076466&partnerID=8YFLogxK},
+	url = {},
 	abstract = {Social anxiety disorder (SAD) is one of the most common and impairing psychological disorders. To advance our understanding of SAD, several researchers have put forth explanatory models over the years, including one which we originally published almost two decades ago (Rapee \& Heimberg, 1997), which delineated the processes by which socially anxious individuals are affected by their fear of evaluation in social situations. Our model, as revised in the 2010 edition of this text, is summarized and further updated based on recent research on the multiple processes involved in the maintenance of SAD.},
 	urldate = {2024-06-28},
 	booktitle = {Social {Anxiety}},
@@ -5387,8 +5387,8 @@ age: 2 years mean, 1.5-2.5 years range
 }
 
 @article{mangnus2024social,
-	title = {Social {Anxiety} {Alters} {Theory} of {Mind} {Activation} and {Intersubject} {Neural} {Variability} {During} {Movie} {Viewing}},
-	author = {Mangnus, Margot and Koch, Saskia B. J. and Devillers, Robin and Hagoort, Peter and Bašnáková, Jana and Stolk, Arjen},
+	title = {Altered Theory of Mind Activation and Intersubject Neural Variability in Social Anxiety During Movie Viewing.},
+	author = {Koch, Saskia B.J. and Mangnus, Margot and Devillers, Robin and Hagoort, Peter and Ba\v{s}n\'{a}kov\'{a}, Jana and Stolk, Arjen},
 	journal = {},
 	year = {2024},
 }
@@ -5784,7 +5784,7 @@ Higher theta power for syntactically correct sentences compared to sentences wit
 	series = {Conference on {Human} {Factors} in {Computing} {Systems} - {Proceedings}},
 	title = {Investigating the influence of avatar facial characteristics on the social behaviors of children with autism: 34th {Annual} {Conference} on {Human} {Factors} in {Computing} {Systems}, {CHI} 2016},
 	shorttitle = {Investigating the influence of avatar facial characteristics on the social behaviors of children with autism},
-	url = {http://www.scopus.com/inward/record.url?scp=85015012168&partnerID=8YFLogxK},
+	url = {},
 	doi = {10.1145/2858036.2858345},
 	abstract = {Autism spectrum disorder (ASD) is characterized by unusual social communication and interaction. These traits are often targets for intervention, particularly computer-based interventions (CBIs). We examined whether interactive behaviors in children with autism could be influenced by modifying the facial characteristics of computer avatars and how behavior toward avatars compared to that toward video. Participants spoke with a therapist over a modified videoconferencing system that permitted manipulation of her appearance (i.e., using cartoon or more realistic avatars versus video) and motion (i.e., exaggerating or damping facial movements). We measured the participants' speech, gaze, and gestures. In the first study, we found that the appearance complexity of the avatar did not significantly affect any social interaction behaviors. However, the results of the second study suggest that exaggerated facial motion can improve nonverbal social behaviors, such as gaze and gesture. These findings have implications for character design in CBIs for ASD.},
 	urldate = {2024-11-19},
@@ -5919,7 +5919,7 @@ Conclusions
 Our findings provide functional evidence of spontaneous mentalizing in autism, demonstrating this capacity in a context affording but not requiring mentalizing. Rather than responses to ToM events, a novel neurocognitive signature – inter-individual variability in brain and pupil responses to evolving social narratives – differentiated neurotypical individuals from those with autism. These results suggest that idiosyncratic narrative processing in unstructured settings, a common element of everyday social interactions, may offer a more sensitive scenario for understanding the autistic mind.},
 	urldate = {2024-12-04},
 	journal = {Biological Psychiatry: Cognitive Neuroscience and Neuroimaging},
-	author = {Mangnus, Margot and Koch, Saskia B. J. and Cai, Kexin and Romaneli, Miriam Greidanus and Hagoort, Peter and Bašnáková, Jana and Stolk, Arjen},
+	author = {Mangnus, Margot and Koch, Saskia B. J. and Cai, Kexin and Romaneli, Miriam Greidanus and Hagoort, Peter and Ba\v{s}n\'{a}kov\'{a}, Jana and Stolk, Arjen},
 	month = oct,
 	year = {2024},
 	keywords = {Functional magnetic resonance imaging, intersubject correlation, naturalistic neuroscience, pupillometry, theory of mind},
@@ -5943,4 +5943,29 @@ Our findings provide functional evidence of spontaneous mentalizing in autism, d
 	keywords = {Action Potentials, Animals, Beta Rhythm, categorization, cognition, Delta Rhythm, Macaca mulatta, Models, Neurological, Nerve Net, neural oscillations, Neurons, neuroscience, parietal cortex, Parietal Lobe, prefrontal cortex, Prefrontal Cortex, rhesus macaque, Spatial Behavior},
 	pages = {e17822},
 	file = {Full Text:C\:\\Users\\mangn\\Zotero\\storage\\HP9XHTA2\\Antzoulatos and Miller - 2016 - Synchronous beta rhythms of frontoparietal network.pdf:application/pdf},
+}
+
+@article{sierpowska2022,
+author = {Joanna Sierpowska  and Katherine L. Bryant  and Nikki Janssen  and Guilherme Blazquez Freches  and Manon R\"{o}mkens  and Margot Mangnus  and Rogier B. Mars  and Vitoria Piai },
+title = {Comparing human and chimpanzee temporal lobe neuroanatomy reveals modifications to human language hubs beyond the frontotemporal arcuate fasciculus},
+journal = {Proceedings of the National Academy of Sciences},
+volume = {119},
+number = {28},
+pages = {e2118295119},
+year = {2022},
+doi = {10.1073/pnas.2118295119},
+url = {https://www.pnas.org/doi/abs/10.1073/pnas.2118295119},
+abstract = {Communication through language is a great achievement of evolution. In humans, the arcuate fasciculus, white matter that extended dramatically during evolution, is known to subserve language. We investigated whether connections through critical language centers in the temporal lobe are uniquely human. We show that connectivity in the posterior temporal lobe via the arcuate fasciculus expanded bilaterally to frontal and parietal cortices in humans compared with chimpanzees. Concomitantly, the ventral tracts connect more strongly to posterior temporal regions in the chimpanzees than in humans. In the anterior temporal lobe, connections shared between both species and uniquely human expansions are present. Changes to human language streams extend beyond the arcuate fasciculus, including a suite of expansions to connectivity within the temporal lobes. The biological foundation for the language-ready brain in the human lineage remains a debated subject. In humans, the arcuate fasciculus (AF) white matter and the posterior portions of the middle temporal gyrus are crucial for language. Compared with other primates, the human AF has been shown to dramatically extend into the posterior temporal lobe, which forms the basis of a number of models of the structural connectivity basis of language. Recent advances in both language research and comparative neuroimaging invite a reassessment of the anatomical differences in language streams between humans and our closest relatives. Here, we show that posterior temporal connectivity via the AF in humans compared with chimpanzees is expanded in terms of its connectivity not just to the ventral frontal cortex but also to the parietal cortex. At the same time, posterior temporal regions connect more strongly to the ventral white matter in chimpanzees as opposed to humans. This pattern is present in both brain hemispheres. Additionally, we show that the anterior temporal lobe harbors a combination of connections present in both species through the inferior fronto-occipital fascicle and human-unique expansions through the uncinate and middle and inferior longitudinal fascicles. These findings elucidate structural changes that are unique to humans and may underlie the anatomical foundations for full-fledged language capacity.}}
+
+@article{janssen2020,
+title = {How the speed of word finding depends on ventral tract integrity in primary progressive aphasia},
+journal = {NeuroImage: Clinical},
+volume = {28},
+pages = {102450},
+year = {2020},
+issn = {2213-1582},
+doi = {https://doi.org/10.1016/j.nicl.2020.102450},
+url = {https://www.sciencedirect.com/science/article/pii/S2213158220302874},
+author = {Nikki Janssen and Ardi Roelofs and Margot Mangnus and Joanna Sierpowska and Roy P.C. Kessels and Vit\'{o}ria Piai},
+keywords = {Primary progressive aphasia, Word finding, Picture-word interference, Diffusion MRI, White matter},
 }
