--- a/Thesis.tex
+++ b/Thesis.tex
@@ -142,6 +142,11 @@
 %\afterpage{\blankpage}
 \include{./Chapters/07_ResearchDataManagement/ResearchDataManagement}
 %\afterpage{\blankpage}
-\include{./Chapters/08_DutchSummary/DutchSummary}
+\include{./Chapters/08_NederlandseSamenvatting/NederlandseSamenvatting}
+\include{./Chapters/CV}
+\include{./Chapters/Publications}
+\include{./Chapters/Acknowledgements}
+\include{./Chapters/DGN}
+
 
 \end{document}
